--- a/js/package.json
+++ b/js/package.json
@@ -33,7 +33,7 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^1.0.0",
+    "@jupyter-widgets/base": "^1.1.0 || ^2",
     "geojs": "^0.18.1",
     "jupyter-dataserializers": "^1.3.0",
     "lodash": "^4.17.4"
