Build updates March 2020

--- a/js/package.json
+++ b/js/package.json
@@ -17,7 +17,8 @@
   ],
   "files": [
     "src/*.js",
-    "dist/*.js"
+    "dist/*.js",
+    "scripts/*"
   ],
   "scripts": {
     "autogen": "node ./scripts/generate-wrappers.js",
